<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <LinearLayout
        android:id="@+id/resultsFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/MantenPresionado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/mantenPresionado"
            android:textColor="#444444"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/continuar"
            android:textSize="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/resultsFooter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ResultsTextString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/NumeroAciertos"
            android:textColor="#444444"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/ResultsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#444444"
            android:textSize="90dp" />

        <ListView
            android:id="@+id/ResultsList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/fondo_lista"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:gravity="center"
            android:textSize="40dp" >
        </ListView>
    </LinearLayout>

</RelativeLayout>